@@ -1,3 +1,7 @@
+05 Apr 2005 mipsator
+ * import of prseng sources, a set of functions to manage a parsing
+   buffer. It will be used in pmkscan and later by the pmk parser.
+
 # snapshot 0.9.2-s1
 
 23 Mar 2005 mipsator
